# TarotAPI

./: README.md  api.py  app.py  deck.py  pyproject.toml
