[tool.poetry]
name = "tarotapi"
version = "1.1.0"
description = "A RESTFul API to read tarot cards made in Python with FastAPI."
authors = ["AlmirPaulo <ap.freelas@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
